--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "parcel src/pages/index.hbs --no-cache",
     "start": "node server.js",
-    "build": "parcel build"
+    "build": "parcel build ./pages/*.hbs"
   },
   "source": "src/index.html",
   "repository": {
