--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "---",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/check_routing.js",
     "serve": "parcel src/pages/index.hbs --no-cache",
     "start": "node server.js",
     "build": "parcel build ./src/pages/*.hbs"
