--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "parcel": "^2.5.0",
     "postcss": "^8.4.14",
     "postcss-modules": "^4.3.1",
-    "postcss-nested": "^5.0.6"
+    "postcss-nested": "^5.0.6",
+    "typescript": "^4.7.2"
   },
   "engines": {
     "node": ">=12"
