--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "middle.messenger.praktikum.yandex",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "---",
   "scripts": {
     "test": "node test/check_routing.js",
@@ -24,7 +24,11 @@
   "homepage": "https://github.com/AlexeiA/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@types/node": "^17.0.40",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
     "parcel": "^2.5.0",
     "postcss": "^8.4.14",
     "postcss-modules": "^4.3.1",
@@ -34,6 +38,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nanoid": "^3.3.4"
   }
 }
