--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "postcss-modules": "^4.3.1",
     "postcss-nested": "^5.0.6",
     "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0"
+    "stylelint-config-standard": "^26.0.0",
+    "typescript": "^4.7.3"
   },
   "engines": {
     "node": ">=12"
