--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/AlexeiA/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@types/node": "^17.0.40",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -35,13 +34,14 @@
     "chai": "^4.3.6",
     "eslint": "^8.16.0",
     "mocha": "^10.0.0",
-    "parcel": "^2.5.0",
     "postcss": "^8.4.14",
     "postcss-modules": "^4.3.1",
     "postcss-nested": "^5.0.6",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0"
   },
   "engines": {
     "node": ">=12"
