--- a/package.json
+++ b/package.json
@@ -32,13 +32,17 @@
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^10.4.7",
     "chai": "^4.3.6",
+    "css-loader": "6.7.1",
     "eslint": "^8.16.0",
     "mocha": "^10.0.0",
     "postcss": "^8.4.14",
+    "postcss-loader": "7.0.1",
     "postcss-modules": "^4.3.1",
     "postcss-nested": "^5.0.6",
+    "style-loader": "3.3.1",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
+    "ts-loader": "9.3.1",
     "typescript": "^4.7.3",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0"
