--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "alias": {
     "nanoid": "./node_modules/nanoid/index.browser",
-    "handlebars": "./node_modules/handlebars/dist/handlebars"
+    "handlebars": "./node_modules/handlebars/dist/handlebars.js"
   },
   "source": "src/index.html",
   "repository": {
@@ -34,6 +34,8 @@
     "chai": "^4.3.6",
     "css-loader": "6.7.1",
     "eslint": "^8.16.0",
+    "handlebars": "4.7.7",
+    "html-webpack-plugin": "5.5.0",
     "mocha": "^10.0.0",
     "postcss": "^8.4.14",
     "postcss-loader": "7.0.1",
@@ -45,7 +47,9 @@
     "ts-loader": "9.3.1",
     "typescript": "^4.7.3",
     "webpack": "5.73.0",
-    "webpack-cli": "4.10.0"
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.9.3",
+    "webpack-node-externals": "3.0.0"
   },
   "engines": {
     "node": ">=12"
