--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "module": "ES6",
+    "module": "CommonJS",
     "rootDir": "./",
     "moduleResolution": "node",
     "typeRoots": [
