--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/AlexeiA/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "@babel/register": "7.18.9",
     "@types/chai": "4.3.1",
     "@types/mocha": "9.1.1",
     "@types/node": "^17.0.40",
