--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,5 @@
 {
   "extension": ["ts"],
   "spec": "test/**/*.spec.ts",
-  "require": "test/babel-register.js"
+  "require": "ts-node/register"
 }
