--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "homepage": "https://github.com/AlexeiA/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@babel/register": "7.18.9",
     "@types/chai": "4.3.1",
+    "@types/jsdom": "16.2.15",
     "@types/mocha": "9.1.1",
     "@types/node": "^17.0.40",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -39,6 +39,7 @@
     "eslint": "^8.16.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
+    "jsdom": "20.0.0",
     "mocha": "^10.0.0",
     "postcss": "^8.4.14",
     "postcss-loader": "7.0.1",
@@ -48,6 +49,7 @@
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
     "ts-loader": "9.3.1",
+    "ts-node": "10.9.1",
     "typescript": "^4.7.3",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
