--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.16.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.1",
     "jsdom": "20.0.0",
     "mocha": "^10.0.0",
     "postcss": "^8.4.14",
@@ -62,5 +63,10 @@
   "dependencies": {
     "express": "^4.18.1",
     "nanoid": "^3.3.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   }
 }
