--- a/package.json
+++ b/package.json
@@ -30,28 +30,28 @@
     "@types/chai": "4.3.1",
     "@types/jsdom": "16.2.15",
     "@types/mocha": "9.1.1",
-    "@types/node": "^17.0.40",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "autoprefixer": "^10.4.7",
-    "chai": "^4.3.6",
+    "@types/node": "17.0.40",
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
+    "autoprefixer": "10.4.7",
+    "chai": "4.3.6",
     "css-loader": "6.7.1",
-    "eslint": "^8.16.0",
+    "eslint": "8.16.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jsdom": "20.0.0",
-    "mocha": "^10.0.0",
-    "postcss": "^8.4.14",
+    "mocha": "10.0.0",
+    "postcss": "8.4.14",
     "postcss-loader": "7.0.1",
-    "postcss-modules": "^4.3.1",
-    "postcss-nested": "^5.0.6",
+    "postcss-modules": "4.3.1",
+    "postcss-nested": "5.0.6",
     "style-loader": "3.3.1",
-    "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
+    "stylelint": "14.9.1",
+    "stylelint-config-standard": "26.0.0",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
-    "typescript": "^4.7.3",
+    "typescript": "4.7.3",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.3",
@@ -61,8 +61,8 @@
     "node": ">=12"
   },
   "dependencies": {
-    "express": "^4.18.1",
-    "nanoid": "^3.3.4"
+    "express": "4.18.1",
+    "nanoid": "3.3.4"
   },
   "husky": {
     "hooks": {
