--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "husky": "8.0.1",
     "jsdom": "20.0.0",
     "mocha": "10.0.0",
+    "npm-run-all": "4.1.5",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.1",
     "postcss-modules": "4.3.1",
