--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "---",
   "scripts": {
     "test": "mocha",
-    "serve": "webpack serve",
+    "serve": "webpack serve --open",
     "start": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "prod": "webpack --config webpack.prod.js"
   },
   "alias": {
     "nanoid": "./node_modules/nanoid/index.browser",
@@ -56,6 +57,7 @@
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.9.3",
+    "webpack-merge": "5.8.0",
     "webpack-node-externals": "3.0.0"
   },
   "engines": {
