--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "chai": "4.3.6",
     "css-loader": "6.7.1",
     "eslint": "8.16.0",
+    "global-jsdom": "8.5.0",
     "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
@@ -53,6 +54,7 @@
     "stylelint-config-standard": "26.0.0",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "4.0.0",
     "typescript": "4.7.3",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
