--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mocha",
     "serve": "webpack serve --open",
-    "start": "node server.js",
+    "start": "npm run prod && node server.js",
     "build": "webpack",
     "prod": "webpack --config webpack.prod.js"
   },
