--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsdom": "20.0.0",
     "mocha": "10.0.0",
     "msw": "0.44.2",
+    "nanoid": "4.0.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.1",
@@ -67,8 +68,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "express": "4.18.1",
-    "nanoid": "3.3.4"
+    "express": "4.18.1"
   },
   "husky": {
     "hooks": {
