--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "5.27.0",
     "autoprefixer": "10.4.7",
     "chai": "4.3.6",
+    "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "8.16.0",
     "global-jsdom": "8.5.0",
